# nanoDB

./: .gitignore  CMakeLists.txt  Makefile  main.cpp
include/nanodb/: nanodb.hpp
include/nanodb/catalog/: catalog.hpp
include/nanodb/core/: types.hpp
include/nanodb/executor/: aggregate_executor.hpp  ddl_executor.hpp  dml_executor.hpp  join_executor.hpp  select_executor.hpp
include/nanodb/parser/: sql_parser.hpp
src/: nanodb.cpp
src/catalog/: catalog.cpp
src/executor/: aggregate_executor.cpp  ddl_executor.cpp  dml_executor.cpp  join_executor.cpp  select_executor.cpp
src/parser/: sql_parser.cpp
src/storage/: disk_manager.cpp
